--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concesionario-multimarca",
+  "name": "Fastfood Delivery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
